# DevSquad

./: .devsquad.yaml  .dockerignore  .editorconfig  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  ABOUT.md  ARCHITECT_CODE_REVIEW_UPDATE.md  CHANGELOG-CN.md  CHANGELOG.md  CLAUDE.md  COMPARISON.md  CONFIGURATION.md  CONTRIBUTING.md  DEVSQUAD_2024_STATUS_REPORT.md  DEVSQUAD_OPTIMIZATION_REVIEW.md  DOCUMENTATION_SUMMARY.md  DevSquad实用价值分析.md  Dockerfile  ENGLISH_PROMPTS.md  EXAMPLES.md  EXAMPLES_EN.md  GUIDE.md  IMPLEMENTATION_STATUS.md  INSTALL.md  LICENSE  MULTILINGUAL_UPDATE_SUMMARY.md  OPTIMIZATION_SUMMARY.md  PUBLISH_QUICK_START.md  QUICKSTART.md  README-CN.md  README-JP.md  README.md  README_EN.md  README_UPDATE_SUMMARY.md  RELEASE_CHECKLIST.md  SKILL-CN.md  SKILL-JP.md  SKILL.md  (+21 more)
.devsquad_data/fingerprints/: fingerprints.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml  test.yml
config/: alerts.yaml  deployment.yaml  llm_optimization.yaml
config/samples/: README.md  devsquad-api.service  devsquad-dashboard.service  env.production  nginx.conf
context/global/: global_context.json
data/tier2/: CLAUDE.md
data/tier3/: episodic_memories.db  episodic_memories.db-shm  episodic_memories.db-wal
data/tier4/: semantic_memories.db  semantic_memories.db-shm  semantic_memories.db-wal
docs/: CODE_WALKTHROUGH_PROPOSAL.md  EXCEPTION_HANDLING_NORMALIZATION_GUIDE.md  INDEX.md  KARPATHY_PRINCIPLES_INSIGHTS.md  MATURITY_ASSESSMENT.md  MATURITY_REPORT_V3.6.1.md  MATURITY_REPORT_V3.6.5.md  NEXT_STEPS_CONSENSUS.md  OPTIMIZATION_1.3_PLAN.md  OPTIMIZATION_3.1_PLAN.md  OPTIMIZATION_CONSENSUS_REPORT.md  OPTIMIZATION_GUIDE.md  OPTIMIZATION_PLAN_KARPATHY.md  OPTIMIZATION_PROGRESS.md  OPTIMIZATION_RECOMMENDATIONS_2026-04-26.md  OPTIMIZATION_REVIEW_SCORE.md  OPTIMIZATION_SESSION_SUMMARY.md  P0_P1_IMPLEMENTATION_PLAN.md  P2_3_TEST_PLAN.md  P2_4_TEST_PLAN.md  P2_P3_PLAN.md  PERFORMANCE_MONITORING_INTEGRATION.md  PROJECT_REVIEW_2026-04-26.md  PROJECT_STATUS.md  PROJECT_TIDY_ASSESSMENT_V3.9.2_round9.md  PROJECT_TIDY_FIX_REPORT_V3.10.0_round1.md  PROJECT_TIDY_FIX_REPORT_V3.9.2_round9.md  PYPI_TRUSTED_PUBLISHER_SETUP.md  PyPI_OIDC_Trusted_Publishing_Setup.md  RELEASE_DECISION_V3.6.5.md  RELEASE_NOTES_v4.1.3.md  RELEASE_SUMMARY.md  REVIEW_CONSENSUS_2026-04-27.md  ROADMAP.md  ROADMAP_V3.7-V4.0.md  TEAM_CONSENSUS_OPTIMIZATION.md  TECHNICAL_DEBT_TEST_FAILURES.md  TECH_DEBT_ASSESSMENT_V4.0.md  USAGE_GUIDE.md  V3.5.0_ENHANCEMENT_PROPOSAL.md  (+2 more)
docs/_archive/: CODE_MAP_SPEC.md  DEVSQUAD_CODE_QUALITY_SPRINT_REPORT.md  E2E_TEST_REPORT_V3.6.5.md  KARPATHY_PRINCIPLES_INSIGHTS.md  OPTIMIZATION_1.3_PLAN.md  OPTIMIZATION_3.1_PLAN.md  (+8 more)
examples/: full_project_workflow.py  quick_demo.py  quick_start.py  tutorial.ipynb
memory-bank/: architecture.md  implementation-plan.md  progress.md
plans/: plan_1774930475.json
progress/: task_progress.json
prompt_evolution/: analysis_1774931127.json  prompt_1774931127.json
prompts/: alpha_generator.json  omega_optimizer.json  registry.py
reports/: benchmark_20260503_190956.html
scripts/: MANUAL_PUBLISHING_GUIDE.md  PUBLISHING_GUIDE.md  RELEASE_NOTES_V3.6.5.md  agent_loop_controller_v2.py  alert_manager.py  api_server.py  auth.py  benchmark_async_dispatch.py  benchmark_ponytail_smart.py  benchmark_real_llm.py  check_async_coverage.py  check_config_consistency.py  check_constructor_params.py  check_dependency_sync.py  check_hidden_content.py  check_test_pyramid.py  check_test_quality.py  check_version_consistency.py  cli.py  cli_dispatch.py  cli_lifecycle.py  cli_utils.py  code_map_generator_v2.py  core_rules.py  dashboard.py  dual_layer_context_manager.py  generate_benchmark_report.py  history_manager.py  knowledge_base_manager.py  mcp_server.py  memory_adapter.py  multi_role_code_walkthrough.py  multi_role_collaborative_analyzer.py  publish_now.sh  release_v3.6.5.sh  release_with_ssh.sh  role_matcher.py  run_real_scenarios.sh  skill_registry.py  standardized_workflow.py  (+12 more)
skills/: __init__.py  _version.py  registry.py
tests/: test_4pt_grid.py  test_adaptive_role_selector.py  test_adversarial_verify.py  test_agent_briefing.py  test_anchor_retrospective.py  test_anti_rationalization.py  test_antipattern_bans.py  test_api_budget_status_endpoint.py  test_api_security.py  test_api_server_v362.py  test_async_coordinator.py  test_async_modules.py  test_audit_logger.py  test_auth_phase5.py  test_autonomous.py  test_benchmark_ponytail_smart.py  test_ccr_store.py  test_check_async_coverage.py  test_check_config_consistency.py  test_check_constructor_params.py  test_check_hidden_content.py  test_check_test_pyramid.py  test_check_test_quality.py  test_check_version_consistency.py  test_ci_feedback_adapter.py  test_cli_deep_v362.py  test_cli_lifecycle.py  test_cli_phase5.py  test_code_knowledge_graph.py  test_collaboration_claw_integration_test.py  test_collaboration_context_compressor_test.py  test_collaboration_core_test.py  test_collaboration_dispatcher_test.py  test_collaboration_dispatcher_ux_test.py  test_collaboration_e2e_test.py  test_collaboration_enhanced_e2e_test.py  test_collaboration_llm_cache_test.py  test_collaboration_llm_retry_test.py  test_collaboration_mce_adapter_test.py  test_collaboration_memory_bridge_test.py  (+129 more)
workflows/: definitions.json
(+557 files in other folders)
