[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "devsquad"
version = "3.9.1"
description = "Production-Ready Multi-Role AI Task Orchestrator"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "DevSquad Team", email = "devsquad@example.com"},
]
keywords = [
    "multi-agent", "orchestration", "llm", "ai", "collaboration",
    "role-based", "consensus", "cybernetics", "task-dispatch",
    "openai", "anthropic", "cli", "api", "dashboard",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

dependencies = [
    "pyyaml>=6.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.18"]
carrymem = ["carrymem[devsquad]>=0.2.8"]
mcp = ["mcp>=0.9"]
monitoring = ["psutil>=5.9", "prometheus-client>=0.19"]
api = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "pydantic>=2.0",
]
visualization = [
    "streamlit>=1.28.0",
    "jupyter>=1.0",
]
alerts = [
    "slack-sdk>=3.21.0",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.1",
    "ruff>=0.4.0",
    "mypy>=1.0",
    "black>=23.0",
    "flake8>=6.0",
]
all = [
    "openai>=1.0",
    "anthropic>=0.18",
    "carrymem[devsquad]>=0.2.8",
    "mcp>=0.9",
    "psutil>=5.9",
    "prometheus-client>=0.19",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "pydantic>=2.0",
    "streamlit>=1.28.0",
    "jupyter>=1.0",
    "slack-sdk>=3.21.0",
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.1",
    "ruff>=0.4.0",
    "mypy>=1.0",
    "black>=23.0",
    "flake8>=6.0",
]

[project.scripts]
devsquad = "scripts.cli:main"

[project.urls]
Homepage = "https://github.com/lulin70/DevSquad"
Documentation = "https://github.com/lulin70/DevSquad/blob/main/README.md"
Repository = "https://github.com/lulin70/DevSquad.git"
Issues = "https://github.com/lulin70/DevSquad/issues"
PyPI = "https://pypi.org/project/devsquad/"

[tool.setuptools.packages.find]
include = ["scripts*", "skills*"]

[tool.setuptools.package-data]
"skills" = ["*.yaml", "*.yml", "*.md"]
"scripts" = ["*.yaml", "*.yml", "*.md"]

# ============ Code Quality Tools ============

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B905",   # zip() without an explicit strict= parameter
    "ARG001", # unused function argument (common in callbacks)
]

[tool.ruff.lint.isort]
known-first-party = ["scripts", "skills"]
known-third-party = ["fastapi", "uvicorn", "pydantic", "yaml", "streamlit"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "silent"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "benchmark: marks tests as performance benchmarks",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["scripts", "skills"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/.*",
    "*/examples/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
fail_under = 60
show_missing = true
precision = 2

[tool.coverage.html]
directory = "htmlcov"
title = "DevSquad Test Coverage Report"

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.bandit]
exclude_dirs = ["tests", "scripts/collaboration/_archived"]
skips = ["B101", "B311", "B404", "B603"]
